--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-flowtype": "4.x",
     "lodash": "^4.17.19",
+    "node-sass": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
@@ -29,10 +31,10 @@
   "eslintConfig": {
     "extends": "react-app",
     "settings": {
-			"react": {
-				"version": "999.999.999"
-			}
-		}
+      "react": {
+        "version": "999.999.999"
+      }
+    }
   },
   "browserslist": {
     "production": [
