--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
