--- a/client/package.json
+++ b/client/package.json
@@ -17,10 +17,12 @@
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-flowtype": "4.x",
     "lodash": "^4.17.19",
+    "moment": "^2.29.1",
     "node-sass": "^5.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.10.0",
+    "react-moment": "^1.0.0",
     "react-redux": "^7.2.0",
     "react-rooter": "^0.1.2",
     "react-router-dom": "^5.2.0",
