--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@typescript-eslint/parser": "2.x",
     "axios": "^0.21.0",
     "babel-eslint": "^10.1.0",
+    "clsx": "^1.1.1",
     "eslint-config-react-app": "^5.2.1",
     "eslint-plugin-flowtype": "4.x",
     "lodash": "^4.17.19",
